// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the CommentsList component. Should match snapshot loading comments. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-28"
  >
    <div
      class="card-title text-dial-gray-dark mb-3"
    >
      Comments
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="text-button-gray text-lg"
        style="margin-top: 10%; margin-bottom: 10%;"
      >
        <svg
          class="w-full spinner mb-5"
          fill="currentColor"
          height="3em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="3em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
          />
        </svg>
        <div
          class="text-center mt-5"
        >
          Fetching data ...
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="cancel-button"
          data-testid="close-button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the CommentsList component. Should match snapshot with comments. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-28"
  >
    <div
      class="card-title text-dial-gray-dark mb-3"
    >
      Comments
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="flex flex-col gap-3"
      >
        <div
          class="bg-white border border-dial-gray card-drop-shadow"
        >
          <div
            class="flex flex-row flex-wrap gap-x-8 p-4 items-center"
          >
            <div
              class="inline-flex gap-x-2 items-center text-dial-gray-dark font-bold self-start"
            >
              <img
                alt="Logo for: user1"
                class="rounded-full w-8"
                src="https://ui-avatars.com/api/name=user1&background=random"
              />
              user1
            </div>
            <div
              class="flex-1 text-justify"
            >
              <p>
                1
              </p>
            </div>
            <button
              class="delete-button gap-x-1.5"
              data-testid="delete-button"
              type="button"
            >
              <svg
                class="text-sm"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
                />
                <path
                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="text-sm"
              >
                Delete
              </span>
            </button>
          </div>
          <div
            class="pl-10 p-3 flex flex-col gap-3"
          >
            <div
              class="bg-white border border-dial-gray card-drop-shadow border-l-4"
            >
              <div
                class="flex flex-row flex-wrap gap-x-8 p-4 items-center"
              >
                <div
                  class="inline-flex gap-x-2 items-center text-dial-gray-dark font-bold self-start"
                >
                  <img
                    alt="Logo for: user2"
                    class="rounded-full w-8"
                    src="https://ui-avatars.com/api/name=user2&background=random"
                  />
                  user2
                </div>
                <div
                  class="flex-1 text-justify"
                >
                  <p>
                    2
                  </p>
                </div>
                <button
                  class="delete-button gap-x-1.5"
                  data-testid="delete-button"
                  type="button"
                >
                  <svg
                    class="text-sm"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
                    />
                    <path
                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="text-sm"
                  >
                    Delete
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="cancel-button"
          data-testid="close-button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the CommentsList component. Should match snapshot without comments. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-28"
  >
    <div
      class="card-title text-dial-gray-dark mb-3"
    >
      Comments
    </div>
    <div
      class="bg-edit p-6"
    >
      There are no comments
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="cancel-button"
          data-testid="close-button"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the CommentsList component. Should open ConfirmActionDialog after user clicks "Delete" button. 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:r2:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="confirm-action-dialog"
  id="headlessui-dialog-:r0:"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center p-4"
  >
    <div
      class="inline-block w-4/5 md:w-3/5 lg:w-3/5 xl:w-1/2 p-8 transform bg-white shadow-xl rounded-2xl ease-out duration-300 opacity-0 scale-95"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r1:"
    >
      <h2
        class="card-title pb-3 text-xl xl:text-2xl text-dial-blue"
        data-headlessui-state="open"
        id="headlessui-dialog-title-:r2:"
      >
        <span
          data-testid="title"
        >
          Deleting a comment
        </span>
      </h2>
      <span
        class="flex flex-col pb-3"
        data-testid="message"
      >
        Are you sure you want to delete this comment?
      </span>
      <div
        class="flex justify-center sm:justify-end gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="confirm-button"
          type="button"
        >
          Confirm
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
